Add missing jdk/internal/misc/PreviewFeatures.isPreviewEnabled native
Fixes the 1044/1044 crash collapse in the Keycloak Azure non-passed
rerun: any real-JDK launch that reaches Class.isUnnamedClass()/
isImplicitClass() (e.g. JUnit's launcher during discovery) triggers
PreviewFeatures.<clinit>, which called this unregistered native and
aborted with UnsatisfiedLinkError before any test ran. Returns false,
matching HotSpot's default with no --enable-preview (that flag is not
parsed yet, tracked separately in the roadmap).

Verified locally (JDK 25): pre-fix binary reproduces the exact
UnsatisfiedLinkError; post-fix binary returns false via reflection on
PreviewFeatures.isEnabled(), matching HotSpot.

Moves the known-issues writeup to docs/internal/fixed-suite-bugs per
the known-issues triage rule (fixed bugs don't stay in known-issues).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>